<resources>
    <string name="app_name">NUMAD23Sp_MariahMaynard</string>
    <string name="about_me_string">About Me</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="mariah_maynard_nmaynard_ma_northeastern_edu">Mariah Maynard \nmaynard.ma@northeastern.edu</string>
    <string name="linkName">Link Name</string>
    <string name="linkUrl">URL</string>
    <string name="add_link">add link</string>
    <string name="submit">Submit</string>
    <string name="url">URL:</string>
    <string name="link_name">Link Name:</string>
    <string name="add_a_link_below">Add a link below!</string>
    <string name="edit">edit</string>
    <string name="latest_prime">Latest Prime</string>
    <string name="prime">-</string>
    <string name="number_being_checked">Number Being Checked: -</string>
    <string name="terminate_search">Terminate Search</string>
    <string name="find_primes">Find Primes</string>
    <string name="pacifier_switch">Pacifier Switch</string>
    <string name="location">Location</string>
    <string name="primes_directive">Primes Directive</string>
    <string name="link_collector">Link Collector</string>
    <string name="total_distance">"Total Distance: "</string>
</resources>